--- a/vignettes/viromeBrowser.Rmd
+++ b/vignettes/viromeBrowser.Rmd
@@ -33,7 +33,7 @@ Three types of files must be loaded in the app:
 
 - _Metadata:_ a metadata file containing a table with sample information. Metadata files must contain a header specifying the variable names and the first column of the table should correspond to the file names of the annotation files (without the file extension).
 
-- _Annotation files:_ annotation files containing annotation details per analyzed contig. Currently, only BLAST-like tabular format is allowed. The columns in the table have to correspond to the: contig id,	annotation,	contig length, hit start,	hit end, hit size,	hit size fraction compared to the reference genome, frame of the hit, sequence identity, evalue and target reference. Make sure that the names of the annotation files are the same as noted in the metadata file. Also make sure that the contig ids match the names of the contigs in the fasta files.
+- _Annotation files:_ annotation files containing annotation details per analyzed contig. Currently, only BLAST-like tabular format is allowed with a single annotation per contig. The columns in the loaded annotation table have to correspond to the contig id, taxonomic annotations, contig length, etc. Make sure that the names of the annotation files are the same as noted in the metadata file. Also make sure that the contig ids match the names of the contigs in the fasta files. The minimal annotation data needed to use the rest of the application are a contig.id and an annotation, but any other annotations will make it possible to filter based on those annotations.
 
 - _Contig files:_ fasta files containing the contigs that were annotated. Make sure that the contig names match the contig names in the annotation file and the file names match the file names of the annotation file (without the extension).
 
@@ -47,7 +47,13 @@ knitr::include_graphics("image1.png")
 
 After loading the data the tables under the panel "Metadata", "Annotation Files" and "Contig Files" will be filled. These tables can be used to check whether the imported data was loaded correctly.
 
-Two new menu items will be also appear in the sidebar on the left, click on the "Interactive Data Browser" tab to continue.
+In the Annotation Files tab it is necessary to select the columns in the uploaded annotation files that correspond to the respective annotation values used by the app. You can click the dropdown fields in the table and select which column should be used for which annotation value. If your annotation data does not contain the a specific value leave it on "NotAvailable". (For the example data you do not have to specify these columns)
+
+```{r, out.width = "680px", echo=FALSE}
+knitr::include_graphics("image1.1.png")
+```
+
+Two new menu items will also appear in the sidebar on the left, click on the "Interactive Data Browser" tab to continue.
 
 ### Filtering and selecting annotation results using the interactive data browser
 
