--- a/vignettes/viromeBrowser.Rmd
+++ b/vignettes/viromeBrowser.Rmd
@@ -55,7 +55,7 @@ Four types of files must be loaded in the app:
 
 - _Contig files:_ fasta files containing the contigs that were annotated. Make sure that the contig names match the contig names in the annotation file and the file names match the file names of the annotation file (without the extension).
 
-- _BAM files:_ the BAM files containing the results of mapping the reads of each sample to the generaged contigs. The names of the contigs should again match the names of the contigs in the contig files. The name of the bam file should also match the name of the contig and annotation file.
+- _BAM files:_ the BAM files containing the results of mapping the reads of each sample to the generated contigs. The names of the contigs should again match the names of the contigs in the contig files. The name of the bam file should also match the name of the contig and annotation file.
 
 After loading all the files press the "Load Data" button to start processing the files.
 
